--- a/wp-content/themes/join-mpd/assets/scss/modules/_header.scss
+++ b/wp-content/themes/join-mpd/assets/scss/modules/_header.scss
@@ -3,6 +3,13 @@
 //==================
 
 /* Hero styles */
+body {
+  &.home {
+    #header-container {
+      padding-bottom: 0;
+    }
+  }
+}
 #header-container {
   background: url(../images/city-of-memphis.jpg) $blue no-repeat 50% 50% / cover;
   padding-bottom: 60px;
