--- a/wp-content/themes/join-mpd/assets/scss/pages/_home.scss
+++ b/wp-content/themes/join-mpd/assets/scss/pages/_home.scss
@@ -81,7 +81,7 @@
   }
 
   &__video-background {
-    position: fixed;
+    position: fixed !important;
     max-height: 100vh;
     //margin-top: -255px;
     @include breakpoint(md) {
