--- a/wp-content/themes/join-mpd/assets/scss/pages/pages.scss
+++ b/wp-content/themes/join-mpd/assets/scss/pages/pages.scss
@@ -3,3 +3,4 @@
 @import 'inner'; // Inner Pages
 @import 'contact'; // Contact Page
 @import 'benefits'; // Benefits & Salary
+@import 'events'; // Events
