quick style tweak for calendar

--- a/wp-content/themes/join-mpd/assets/scss/pages/_events.scss
+++ b/wp-content/themes/join-mpd/assets/scss/pages/_events.scss
@@ -16,6 +16,9 @@
     &.tribe-events-present {
       div[id*='tribe-events-daynum-'] {
         background-color: $dkblue;
+        a {
+          background-color: $dkblue;
+        }
       }
     }
   }
