--- a/wp-content/themes/join-mpd/assets/scss/modules/_footer.scss
+++ b/wp-content/themes/join-mpd/assets/scss/modules/_footer.scss
@@ -19,7 +19,7 @@ footer {
       color: $wht;
     }
     p {
-      font-size: .75rem;
+      font-size: 0.75rem;
       &:last-of-type {
         margin-bottom: 0;
       }
@@ -100,6 +100,8 @@ footer {
 
 /* Copyright */
 #copyright {
+  position: relative;
+  z-index: 1;
   padding: 15px 0;
   background: none $blue;
   border-top: 1px solid $wht50;
