--- a/wp-content/themes/join-mpd/assets/scss/pages/_blog.scss
+++ b/wp-content/themes/join-mpd/assets/scss/pages/_blog.scss
@@ -9,7 +9,29 @@
 }
 .excerpt-container {
   padding: 30px;
+  border: 1px solid $blk20;
   h2 {
     @include font-size(36px);
+    & > * {
+      font-family: $heading;
+    }
+    a {
+      color: $dkblue;
+    }
+  }
+  p {
+    @include font-size(18px, 150%);
+    @include letter-spacing(0.75px);
+  }
+}
+
+// Pagination
+.page-nav {
+  text-align: center;
+  font-family: $heading;
+  font-weight: 700;
+  @include font-size(18px, 100%);
+  & > * {
+    margin: 0 15px;
   }
 }
