editor and blog updates

--- a/wp-content/themes/join-mpd/assets/scss/editor.scss
+++ b/wp-content/themes/join-mpd/assets/scss/editor.scss
@@ -7,6 +7,7 @@
 @import 'fontawesome/brands'; // Brands
 @import 'modules/typography'; // Typography
 @import 'pages/inner'; //Inner Page Styles
+@import 'pages/blog'; // Blog Styles
 @import 'modules/blocks/hiring-process'; // Hiring Process
 
 /* reset body background */
